src/style.css
/* Utils */
/*----- Colors -----*/
/*----- Fonts -----*/
/*----- Dimensions and sizes -----*/
/* Base */
@font-face {
  font-family: 'Josefin Sans';
  font-style: normal;
  font-weight: 300;
  src: local('Josefin Sans Light'), local('JosefinSans-Light'), url(https://fonts.gstatic.com/s/josefinsans/v14/Qw3FZQNVED7rKGKxtqIqX5Ecpl5te10k.ttf) format('truetype');
}

@font-face {
  font-family: 'Josefin Sans';
  font-style: normal;
  font-weight: 700;
  src: local('Josefin Sans Bold'), local('JosefinSans-Bold'), url(https://fonts.gstatic.com/s/josefinsans/v14/Qw3FZQNVED7rKGKxtqIqX5Ectllte10k.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: italic;
  font-weight: 300;
  src: local('Lato Light Italic'), local('Lato-LightItalic'), url(https://fonts.gstatic.com/s/lato/v16/S6u_w4BMUTPHjxsI9w2_Gwfo.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: italic;
  font-weight: 400;
  src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v16/S6u8w4BMUTPHjxsAXC-v.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: italic;
  font-weight: 700;
  src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v16/S6u_w4BMUTPHjxsI5wq_Gwfo.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 300;
  src: local('Lato Light'), local('Lato-Light'), url(https://fonts.gstatic.com/s/lato/v16/S6u9w4BMUTPHh7USSwiPHA.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v16/S6uyw4BMUTPHjx4wWw.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 700;
  src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v16/S6u9w4BMUTPHh6UVSwiPHA.ttf) format('truetype');
}

html {
  background: white;
}

body {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 400;
  background: white;
  margin: 50px 0 100px;
  letter-spacing: .3px;
  color: #39424B;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-transform: none;
  margin: 0;
}

h1 {
  font-family: "Josefin Sans", Helvetica, Arial, sans-serif;
  font-weight: 700;
  font-size: 40px;
  letter-spacing: 1px;
}

h2 {
  font-family: "Josefin Sans", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: .5px;
}

h3 {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 14px;
  letter-spacing: .4px;
}

h3.bold {
  font-weight: 700;
}

h4 {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 12px;
}

h4.bold {
  font-weight: 700;
}

h5 {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 11px;
}

h5.italic {
  font-style: italic;
}

h6 {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-size: 10px;
  color: gray;
}

a {
  color: inherit;
  text-decoration: inherit;
}

a:hover {
  color: #2895F1;
}

a .fa-external-link {
  font-size: 10px;
  vertical-align: text-top;
}

p,
li {
  font-size: 11px;
  text-align: justify;
}

blockquote {
  font-size: 11px;
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-style: italic;
  margin: 0;
  text-align: justify;
}

em {
  color: #999;
}

ul {
  margin: 0 0 0 1em;
  padding: 0em;
}

ul li {
  padding-left: 10px;
}

ul.minimal {
  list-style: none;
  padding: 0;
}

ul.minimal li {
  margin-bottom: 3px;
  padding-left: 0;
}

ul.two-column {
  -webkit-column-count: 2;
  -webkit-column-gap: 28px;
  column-count: 2;
  column-gap: 28px;
}

ul.two-column li {
  padding-left: 0;
}

i {
  margin-right: .1em;
}

@page {
  size: A4;
}
 
/* General */
section {
  margin-top: .75em;
}

.keyline {
  width: 45px;
  margin: 8px 0 10px;
  border-top: 1px solid #56817A;
}

.sublink {
  font-size: 70%;
  font-weight: 200;
  color: dimgray;
}

.capitalize {
  text-transform: capitalize;
}

.chip {
  margin: .15em;
  padding: .15em;
  background: ghostwhite;
  border-radius: 5px;
  color: black;
}

/* Header Section */
.header {
  display: flex;
  flex-direction: row;
}

.profile-pic {
  margin-top: -5px;
  margin-right: 18px;
}

.profile-pic img {
  height: 52px;
  width: 52px;
  border-radius: 50%;
  border: 2px solid #56817A;
}

.header .title {
  flex-grow: 1;
}

.header .about {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

/* Profiles Section */
.profiles {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 1em;
}

/* Summary Section */
.summary {
  margin: 5px 0 5px;
}

/* Skills Section */
.skills {
  display: flex;
  flex-direction: row;
  align-items: first baseline;
}

.skills-header {
  display: flex;
  flex-direction: column;
  min-width: 12%;
  margin-right: .5em;
  text-align: end;
}

/* Work Section */
.company {
  display: flex;
  flex-direction: column;
  align-items: first baseline;
  margin-bottom: .5em;
}

.company .header {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.company .header .title {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  gap: .25em;
}

.company .header .about {
  display: flex;
  flex-direction: column;
  gap: .25em;
  min-width: 20%;
}

.position {
  display: flex;
  flex-direction: column;
  margin-top: 0;
  margin-left: .25em;
  margin-bottom: .3em;
  gap: .25em;
}

.last {
  margin-bottom: 1em;
}

.position .header {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.position .header h3 {
  flex-grow: 1;
  padding-left: .5em;
}

.position .bullet {
    content: "\A";
    width: .5em;
    height: .5em;
    border-radius: 50%;
    background: rgba(0, 0, 0, 0.3);
}

.position .content {
  display: flex;
  flex-direction: column;
  gap: .25em;
  margin-left: .175em;
  padding-left: .65em;
  border-left: solid rgba(0, 0, 0, 0.3) .15em;
}

.position .content p {
  margin: 0;
}

.position .last {
  border-color: transparent;
  padding-bottom: 0em;
}

/* Education Section */
.row {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  gap: .25em;
  margin-bottom: .25em;
}

.column {
  display: flex;
  flex-direction: column;
  gap: .25em;
}

.main {
  align-items: flex-start;
  flex-grow: 1;
}

.meta {
  align-items: flex-end; 
}

/* Reference Section */
.left {
  align-self: flex-start;
}

.right {
  align-self: flex-end;
}


/* Layouts */
.page {
  background: white;
  width: 612px;
  min-height: 792px;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  border-top: 10px solid #56817A;
  padding: 34px;
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
}

.page:after {
  content: "";
  display: table;
  clear: both;
}

.left-column {
  float: left;
  width: 160px;
  margin-right: 20px;
  word-wrap: break-word;
}

.right-column {
  width: auto;
  overflow: hidden;
}

@media print {
  body {
    margin: 0;
  }

  .page {
    width: 100%;
    height: 100%;
    margin: 0;
    box-shadow: none;
  }

  section {
    page-break-inside: avoid;
  }

  .fa-external-link {
    display: none;
  }

  /* FIXME: Leaning on Header and Sections */
  .page .resume-header
  .page .resume-content {
    padding: 0 22px 0 34px;
  }
}

/* Components */
.info-tag-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-bottom: 5px;
}

.info-tag-container .fa {
  font-size: 14px;
  width: 12px;
  margin-right: 5px;
  text-align: center;
  vertical-align: middle;
}

.info-tag-container .fa.fa-map-marker {
  font-size: 16px;
}

.info-tag-container .fa.fa-mobile {
  font-size: 18px;
}

.info-tag-container .fa.fa-envelope-o {
  font-size: 12px;
}

.info-tag-container .fa.fa-desktop {
  font-size: 11px;
}

.info-tag-container .fa.fa-external-link {
  width: auto;
  font-size: inherit;
  vertical-align: text-top;
}

.info-tag-container .info-text {
  font-size: 12px;
  text-transform: none;
  display: inline-block;
  vertical-align: middle;
}

.references-container .fa {
  font-size: 14px;
}

.education-container .location {
  padding-bottom: 6px;
  font-weight: 400;
}

.education-container .specialization {
  text-transform: none;
  font-style: italic;
}

.flex-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

